发现错误提示是redis密码设置无效导致的

--- a/book/service/user/api/etc/user-api.yaml
+++ b/book/service/user/api/etc/user-api.yaml
@@ -2,8 +2,11 @@ Name: user-api
 Host: 0.0.0.0
 Port: 8888
 Mysql:
-  DataSource: admin:123456@tcp(localhost:3307)/go-zero-demo?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+  DataSource: root:123456@tcp(127.0.0.1:3307)/go-zero-demo?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
 CacheRedis:
-  - Host: localhost:6379
-    Pass: 123456
+  - Host: 127.0.0.1:6379
+    Pass:
     Type: node
+Auth:
+  AccessSecret: "abcd"
+  AccessExpire: 604800
